feat: Generating and receiving connection codes
